Fix layout problems

--- a/src/assets/style/cmps/ToyList.css
+++ b/src/assets/style/cmps/ToyList.css
@@ -4,6 +4,7 @@
     gap: 1em;
     justify-content: center;
     margin-block: 1em;
+    max-width: none;
 }
 
 .toy-list ul {
